# cmake

./: .gitmodules  Backports.cmake  BadFortranDefaults.cmake  Batch.cmake  CMakeDependentCacheVar.cmake  CMakeDependentSelection.cmake  CMakeDependentVariable.cmake  CXX.cmake  DelegatingCacheVariable.cmake  DelegatingOption.cmake  DelegatingSelection.cmake  DependencyInjection.cmake  DependentDelegatingCacheVariable.cmake  DependentDelegatingOption.cmake  DependentDelegatingSelection.cmake  FPreProcessor.cmake  Fortran.cmake  FortranCompileOptions.cmake  FortranPreProcess.cmake  FortranTypes.cmake  FunctionExtension.cmake  GeneratedSources.cmake  Intel.cmake  ListBinaryDir.cmake  OverrideFortranCompilerDefaults.cmake  README.md  Sanitizers.cmake  Selection.cmake  Submodule.cmake  SubmodulePackage.cmake  Warnings.cmake  config.cmake  install.cmake  shaclConfig.cmake  shacl_FetchContent.cmake
Backports/: IncludeGuard.cmake  MPI.cmake  OpenMP.cmake  SeparateArguments.cmake  X11.cmake
Backports/MPI/: FindMPI.cmake
Backports/OpenMP/: FindOpenMP.cmake
Backports/X11/: FindX11.cmake
Batch/: Slurm.cmake
CXX/: ExceptionsStaticLinkable.cmake  ExceptionsStaticLinkableWith.cmake
CompileOptions/: Fortran.cmake  Intel.cmake
CompileOptions/Fortran/: Backtrace.cmake  NoBackslashEscape.cmake  Standard.cmake  TempArrayHeapAlloc.cmake
CompileOptions/Intel/: DiagDisable.cmake  FPModel.cmake  FortranStandardAdherence.cmake  Warn.cmake
DependencyInjection/: add_executable.cmake  add_library.cmake
Fortran/: BackslashEscape.cmake  Backtrace.cmake  Exceptions.cmake  ExecutableLinkableWith.cmake  Integer.cmake  LongLines.cmake  ModuleDirectory.cmake  NoBackslashEscape.cmake  Real.cmake  StackArraySizeLimit.cmake  Standard.cmake  StandardAdherence.cmake  StandardCompliance.cmake  TempArrayHeapAlloc.cmake  TempArrays.cmake
Fortran/BackslashEscape/: GNU.cmake  Intel.cmake  PGI.cmake
Fortran/Backtrace/: GNU.cmake  Intel.cmake  PGI.cmake
Fortran/ExecutableLinkableWith/: CMakeLists.txt
Fortran/Integer/: Flang.cmake  GNU.cmake  Intel.cmake  PGI.cmake
Fortran/LongLines/: GNU.cmake
Fortran/NoBackslashEscape/: Flang.cmake  (+1 more)
FortranCompileOptions/: Backtrace.cmake  FreeForm.cmake  IntelDiagDisable.cmake  IntelFPModel.cmake  IntelStandardAdherence.cmake  IntelWarn.cmake  NoBackslashEscape.cmake  Standard.cmake  Standard2008.cmake  TempArrayHeapAlloc.cmake
FortranPreProcess/: FortranPreProcess.cmake  filename.cmake  target_sources.cmake
FortranPreprocess/: target_sources.cmake
FortranTypes/: Integer.cmake  Real.cmake
FunctionExtension/: FetchContent_Declare.cmake  FetchContent_MakeAvailable.cmake  add_executable.cmake  add_library.cmake  backup.cmake  decrement.cmake  find_package.cmake  increment.cmake  pop.cmake  push.cmake  target_sources.cmake
GeneratedSources/: ListBinaryDir.cmake  add_executable.cmake  add_library.cmake  generated_sources_trap.cmake  module.cmake  stripped.cmake  target_sources.cmake  trap.cmake
Git/: FetchContent.cmake
Intel/: Assumptions.cmake  DiagDisable.cmake  FPModel.cmake  FPSpeculation.cmake  FortranAssumptions.cmake  FortranStandardAdherence.cmake  Warn.cmake
LinkOptions/: StackSize.cmake
OverrideFortranCompilerDefaults/: NoBackslashEscape.cmake  StandardAdherence.cmake
Sanitizers/: configuration.cmake
Warnings/: C.cmake  CXX.cmake  Fortran.cmake
foo/: module.cmake
git/: submodule.cmake
shacl_FetchContent/: README.md  relative_git_url.cmake
testing/Backports/: CMakeLists.txt
testing/Backports/src/: main.f90
tests/: CMakeLists.txt
tests/CompileOptions/: CMakeLists.txt
tests/CompileOptions/Fortran/Backtrace/: CMakeLists.txt
tests/CompileOptions/Fortran/NoBackslashEscape/: CMakeLists.txt  terminal_output_PGI  use_no_backslash_escape.F90.in
tests/CompileOptions/Fortran/Standard/: CMakeLists.txt
tests/CompileOptions/Fortran/TempArrayHeapAlloc/: CMakeLists.txt  terminal_output_Intel
tests/CompileOptions/Intel/DiagDisable/: CMakeLists.txt
tests/CompileOptions/Intel/FPModel/: CMakeLists.txt
tests/CompileOptions/Intel/FortranStandardAdherence/: CMakeLists.txt
tests/CompileOptions/Intel/Warn/: CMakeLists.txt  use_intel_warn.f90.in
tests/Fortran/LongLines/: CMakeLists.txt
tests/Fortran/Standard/: CMakeLists.txt
tests/FortranCompileOptions/Backtrace/: CMakeLists.txt  use_backtrace.f90.in
tests/FortranCompileOptions/FreeForm/: CMakeLists.txt  terminal_output_Flang  terminal_output_Intel  terminal_output_Intel_win32  terminal_output_PGI  use_free_form.f90.in
tests/FortranCompileOptions/IntelDiagDisable/: CMakeLists.txt  terminal_output_Intel  terminal_output_Intel_win32  terminal_output_win32  use_intel_diag_disable.f90  use_intel_diag_disable.f90.in
tests/FortranCompileOptions/IntelWarn/: CMakeLists.txt  terminal_output_Intel  terminal_output_Intel_win32  terminal_output_win32  use_intel_warn.f90.in
tests/FortranCompileOptions/NoBackslashEscape/: CMakeLists.txt  terminal_output_Flang
tests/FortranCompileOptions/Standard2008/: CMakeLists.txt  use_standard_2008.f90.in
tests/FortranCompileOptions/TempArrayHeapAlloc/: CMakeLists.txt  terminal_output_Intel_win32  use_temp_array_heap_alloc.f90.in
tests/FortranTypes/Integer/: CMakeLists.txt  size_mod.F90  test.F90  test.c  test.cpp  test.f90
tests/FortranTypes/Real/: CMakeLists.txt  size_mod.F90  test.F90  test.c  test.cpp  test.f90
tests/GeneratedSources/target_sources/: CMakeLists.txt  test1  test2
tests/GeneratedSources/target_sources/subdirectory/: CMakeLists.txt
tests/Intel/Assumptions/: CMakeLists.txt  assumptions.f90.in
tests/LinkOptions/StackSize/: CMakeLists.txt  use_stack_size.f90.in
tests/OverrideFortranCompilerDefaults/: CMakeLists.txt  use_backslash.f90
tests/OverrideFortranCompilerDefaults/standard_semantics/: CMakeLists.txt  use_standard_semantics.f90
tests/OverrideFortranCompilerDefaults/use_backslash/: CMakeLists.txt  use_backslash.f90
tests/Sanitizers/: CMakeLists.txt
tests/Warnings/: CMakeLists.txt  warnings.cpp.in  warnings.f90.in
tests/shacl_FetchContent/: CMakeLists.txt
type_size/: int_size.cmake  real_size.cmake
(+130 files in other folders)
