add_subdirectory(Fortran/Backtrace)
add_subdirectory(Fortran/Standard)
add_subdirectory(Fortran/TempArrayHeapAlloc)
add_subdirectory(Fortran/NoBackslashEscape)

add_subdirectory(Intel/DiagDisable)
add_subdirectory(Intel/FPModel)
add_subdirectory(Intel/Warn)
add_subdirectory(Intel/FortranStandardAdherence)
